--- a/template.html
+++ b/template.html
@@ -50,7 +50,7 @@
         </ul>
 
         
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-md navbar-dark bg-dark">
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <div class="navbar-nav nav-fill nav">
                         <a class="nav-item nav-link" href="#">Home
