--- a/template.html
+++ b/template.html
@@ -4,110 +4,120 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
     <title>Template</title>
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-
     <link rel="stylesheet" type="text/css" media="screen" href="css/bootstrap.min.css" />
+
+    <link rel="stylesheet" type="text/css" media="screen" href="css/bootstrap-style.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="css/media-style.css" />
 
 </head>
 
 <body class="bg-dark">
 
-    <nav class="navbar navbar-expand-lg navbar-light" style="background: #3E97D6">
+    <!-- ============== FILM FESTIVAL NAVBAR ================ -->
+    <nav class="navbar navbar-expand-md navbar-light bg-blue">
         <div class="navbar-brand">
-            <a href="#">
+            <a href="index.html" class="d-none d-md-inline">
                 <img src="images/Capture.JPG" width="120px">
             </a>
-            <span class="h1 align-middle ">Film Festival 2018</span>
+            <span class="h1 align-middle" id="festival-title">Film Festival 2018</span>
         </div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
             aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-
     </nav>
 
-    <!-- #3E97D6 - bila je tu umesto bg-dark i navbar-dark -->
-    <div class="container">
-
-        <!-- ============== NAVBAR ================ -->
-
-        <ul class="nav nav-pills nav-fill">
-            <li class="nav-item">
-                <a class="nav-link active" href="#">Active</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Longer nav link</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link disabled" href="#">Disabled</a>
-            </li>
-        </ul>
-
-        
-        <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+    <!-- ============== NAVBAR ================ -->
+    <header>
+        <nav class="navbar navbar-expand-md bg-dark" id="main-navbar">
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <div class="navbar-nav nav-fill nav">
-                        <a class="nav-item nav-link" href="#">Home
-                            <span class="sr-only">(current)</span>
-                        </a>
+                <div class="navbar-nav nav-pills mx-auto text-blue text-uppercase">
+                    <a class="nav-item nav-link h3" href="#">Home
+                        <span class="sr-only">(current)</span>
+                    </a>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
-                            aria-expanded="false">
+                        <a class="nav-link h3" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Info
                         </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#">About</a>
-                            <a class="dropdown-item" href="#">Jury</a>
-                            <a class="dropdown-item" href="#">Sponsors</a>
-                            <a class="dropdown-item" href="#">Contact</a>
+                        <div class="dropdown-menu bg-blue" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item h5 rounded" href="#">About</a>
+                            <a class="dropdown-item h5 rounded" href="#">Jury</a>
+                            <a class="dropdown-item h5 rounded" href="#">Sponsors</a>
+                            <a class="dropdown-item h5 rounded" href="#">Contact</a>
                         </div>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
-                            aria-expanded="false">
+                        <a class="nav-link h3" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Repertoire
                         </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#">Films</a>
-                            <a class="dropdown-item" href="#">Showings</a>
-                            <a class="dropdown-item" href="#">Tickets</a>
+                        <div class="dropdown-menu bg-blue" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item h5 rounded" href="#">Films</a>
+                            <a class="dropdown-item h5 rounded" href="#">Showings</a>
+                            <a class="dropdown-item h5 rounded" href="#">Tickets</a>
                         </div>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Actors</a>
+                        <a class="nav-link h3" href="#">Actors</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="#">News</a>
+                        <a class="nav-link h3" href="#">News</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Favourites</a>
+                        <a class="nav-link h3" href="#">Favourites</a>
                     </li>
                 </div>
             </div>
         </nav>
+    </header>
 
+    <!-- ============== MAIN ================ -->
+    <main class="container">
+        <div class="row">
 
-        <!-- ============== CONTENT ================ -->
+            <!-- ============== LEFT NAVIGATION ================ -->
+            <nav class="col-md-2 border border-warning">
+                <div class="btn-group-vertical w-100" role="group" aria-label="Basic example">
+                    <button type="button" class="btn btn-outline-blue">Left</button>
+                    <button type="button" class="btn btn-outline-blue">Middle</button>
+                    <button type="button" class="btn btn-outline-blue">Right</button>
+                </div>
 
+            </nav>
+            <!-- ============== MAIN CONTENT ================ -->
+            <div class="col-md-8 border border-warning">
+                main content
 
-        <!-- ============== FOOTER ================ -->
+            </div>
 
+            <!-- ============== BANNER ================ -->
+            <div class="col-md-2 border border-warning">
 
-        <footer class="text-light text-center">
-            <span class="font-italic">&copy; 2018 Marija Kostić, Stefan Milanović</span>
-            <br /> Odsek za softversko inženjerstvo Elektrotehničkog fakulteta Univerziteta u Beogradu
-            <br />
-        </footer>
-    </div>
+                <a href="" class="d-none d-md-block">
+                    <img src="images/banner.jpg" class="w-100" alt="banner">
+                </a>
+                <a href="" class="d-md-none">
+                    <img src="images/banner-small.JPG" class="w-100" alt="banner">
+                </a>
+            </div>
+        </div>
+    </main>
+
+    <!-- ============== FOOTER ================ -->
+    <footer class="text-light text-center my-5">
+        <span class="font-italic">&copy; 2018 Marija Kostić, Stefan Milanović</span>
+        <br /> Odsek za softversko inženjerstvo Elektrotehničkog fakulteta Univerziteta u Beogradu
+        <br />
+    </footer>
+
 
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/popper.min.js"></script>
