--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Template</title>
+    <title>Film Festival</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -90,46 +90,105 @@
     <!-- ============== MAIN ================ -->
     <main class="container">
 
-        <!-- ============== BREADCRUMBS ================ -->
-        <div class="row">
+        <!-- ============== CAROUSEL ================ -->
+        <div class="row pb-4">
             <div class="col">
-                <nav aria-label="breadcrumb">
-                    <ol class="breadcrumb">
-                        <li class="breadcrumb-item">
-                            <a href="index.html">
-                                <i class="fa fa-home"></i>
-                            </a>
-                        </li>
-                        <li class="breadcrumb-item">
-                            <a href="#">Library</a>
-                        </li>
-                        <li class="breadcrumb-item active" aria-current="page">Data</li>
+                <div id="carouselId" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carouselId" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselId" data-slide-to="1"></li>
+                        <li data-target="#carouselId" data-slide-to="2"></li>
                     </ol>
-                </nav>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img class="d-block w-100" src="images/carousel1.jpg" alt="First slide">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Caption 1</h5>
+                                <p>neki tekst</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="images/carousel2.jpg" alt="Second slide">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Caption 2</h5>
+                                <p>neki tekst</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="images/carousel3.jpg" alt="Third slide">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Caption 3</h5>
+                                <p>neki tekst</p>
+                            </div>
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselId" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselId" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
 
-                <!-- <hr class="bg-blue" /> -->
             </div>
         </div>
         <div class="row">
+            <!-- ============== RECOMMENDATIONS ================ -->
+            <div class="col-md-10">
+                <div class="row">
+                    <dv class="col">
+                        <h2 class="text-blue">
+                            Recommendations
+                        </h2>
+                    </dv>
+                </div>
+                <div class="row">
+                    <div class="col-6 col-lg-3 mb-3">
 
-            <!-- ============== LEFT NAVIGATION ================ -->
-            <nav class="col-md-2">
-                <div class="btn-group-vertical w-100" role="group" aria-label="Basic example">
-                    <button type="button" class="btn btn-outline-blue">Left</button>
-                    <button type="button" class="btn btn-outline-blue">Middle</button>
-                    <button type="button" class="btn btn-outline-blue">Right</button>
+                        <div class="card">
+                            <img class="card-img-top" src="images/movies/blade_runner.jpg" alt="Card image cap">
+                            <!-- <div class="card-body">
+                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            </div> -->
+                        </div>
+                    </div>
+                    <div class="col-6 col-lg-3">
+
+                        <div class="card">
+                            <img class="card-img-top" src="images/movies/rocky.jpg" alt="Card image cap">
+                            <!-- <div class="card-body">
+                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            </div> -->
+                        </div>
+                    </div>
+                    <div class="col-6 col-lg-3">
+
+                        <div class="card">
+                            <img class="card-img-top" src="images/movies/terminator.jpg" alt="Card image cap">
+                            <!-- <div class="card-body">
+                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            </div> -->
+                        </div>
+                    </div>
+                    <div class="col-6 col-lg-3">
+
+                        <div class="card">
+                            <img class="card-img-top" src="images/movies/titanic.jpg" alt="Card image cap">
+                            <!-- <div class="card-body">
+                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            </div> -->
+                        </div>
+                    </div>
                 </div>
 
-            </nav>
-            <!-- ============== MAIN CONTENT ================ -->
-            <div class="col-md-8">
-                main content
+
 
             </div>
 
             <!-- ============== BANNER ================ -->
             <div class="col-md-2 text-center pt-3">
-
                 <a href="" class="d-none d-md-block">
                     <img src="images/banner.jpg" alt="banner" class="w-75">
                 </a>
@@ -146,7 +205,6 @@
         <br /> Odsek za softversko inženjerstvo Elektrotehničkog fakulteta Univerziteta u Beogradu
         <br />
     </footer>
-
 
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/popper.min.js"></script>
