--- a/template.html
+++ b/template.html
@@ -22,7 +22,7 @@
 
 </head>
 
-<body class="bg-dark">
+<body class="bg-black">
 
     <!-- ============== FILM FESTIVAL NAVBAR ================ -->
     <nav class="navbar navbar-expand-md navbar-light bg-blue">
@@ -33,7 +33,8 @@
             <span class="h1 align-middle" id="festival-title">Film Festival 2018</span>
         </div>
         <a href="#" id="language" class="ml-auto mr-1">
-            <img src="images/eng_flag.png" alt="english-language" class="mr-auto">
+            <img src="images/eng_flag_48.png" alt="english-language" class="mr-auto d-none d-sm-block">
+            <img src="images/eng_flag_32.png" alt="english-language" class="mr-auto d-sm-none">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
             aria-expanded="false" aria-label="Toggle navigation">
@@ -43,7 +44,7 @@
 
     <!-- ============== NAVBAR ================ -->
     <header>
-        <nav class="navbar navbar-expand-md bg-dark" id="main-navbar">
+        <nav class="navbar navbar-expand-md bg-black" id="main-navbar">
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <div class="navbar-nav nav-pills mx-auto text-blue text-uppercase">
                     <a class="nav-item nav-link h3" href="#">Home
@@ -122,29 +123,36 @@
 
             </nav>
             <!-- ============== MAIN CONTENT ================ -->
-            <div class="col-md-8">
+            <div class="col-md-7 col-xl-8">
                 main content
 
             </div>
 
             <!-- ============== BANNER ================ -->
-            <div class="col-md-2 text-center pt-3">
-
+            <div class="col-md-3 col-xl-2">
                 <a href="" class="d-none d-md-block">
-                    <img src="images/banner.jpg" alt="banner" class="w-75">
+                    <img src="images/banner.jpg" alt="banner" class="w-100 py-2">
                 </a>
-                <a href="" class="d-md-none">
-                    <img src="images/banner-small.JPG" alt="banner" class="w-75">
+                <a href="" class="d-md-none pt-5">
+                    <img src="images/banner-small.JPG" alt="banner" class="w-100 py-5">
                 </a>
             </div>
         </div>
     </main>
 
     <!-- ============== FOOTER ================ -->
-    <footer class="text-light text-center my-5">
-        <span class="font-italic">&copy; 2018 Marija Kostić, Stefan Milanović</span>
-        <br /> Odsek za softversko inženjerstvo Elektrotehničkog fakulteta Univerziteta u Beogradu
-        <br />
+    <footer class="container my-5">
+        <div class="row">
+            <div class="col text-center text-light">
+                <a href="#">
+                    <i class="fa fa-arrow-up h3 float-right"></i>
+                </a>
+                <p class="font-italic m-0">&copy; 2018 Marija Kostić, Stefan Milanović</p>
+                <p class="m-0">Odsek za softversko inženjerstvo Elektrotehničkog fakulteta Univerziteta u Beogradu</p>
+
+            </div>
+
+        </div>
     </footer>
 
 
