updated template.html and finished initial version

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Template</title>
+    <title>About Fest</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -32,8 +32,8 @@
             <span class="h1 align-middle" id="festival-title">Film Festival 2018</span>
         </div>
         <a href="#" id="language" class="ml-auto mr-1">
-            <img src="images/eng_flag_48.png" alt="english-language" class="mr-auto d-none d-sm-block">
-            <img src="images/eng_flag_32.png" alt="english-language" class="mr-auto d-sm-none">
+            <img src="images/srb_flag_48.png" alt="serbian-language" class="mr-auto d-none d-sm-block">
+            <img src="images/srb_flag_32.png" alt="serbian-language" class="mr-auto d-sm-none">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
             aria-expanded="false" aria-label="Toggle navigation">
@@ -103,9 +103,9 @@
                             </a>
                         </li>
                         <li class="breadcrumb-item">
-                            <a href="#">Library</a>
+                            <a href="info.html">Info</a>
                         </li>
-                        <li class="breadcrumb-item active" aria-current="page">Data</li>
+                        <li class="breadcrumb-item active" aria-current="page">About</li>
                     </ol>
                 </nav>
 
@@ -119,6 +119,7 @@
                 <div class="btn-group-vertical w-100" role="group">
                     <a href="about.html" class="btn btn-outline-blue">About</a>
                     <a href="jury.html" class="btn btn-outline-blue">Jury</a>
+                    <a href="awards.html" class="btn btn-outline-blue">Awards</a>
                     <a href="sponsors.html" class="btn btn-outline-blue">Sponsors</a>
                     <a href="contact.html" class="btn btn-outline-blue">Contact</a>
                 </div>
@@ -126,14 +127,75 @@
             </nav>
             <!-- ============== MAIN CONTENT ================ -->
             <div class="col-md-8">
-                main content
-
+                <div class="jumbotron p-0">
+                    <img class="img-fluid" alt="festival-team" src="images/us.jpg" />
+                </div>
+                <h2 class="text-blue">About Fest</h2>
+                <p class="lead">
+                    The first FEST, under the slogan "A Brave New World" was opened on the 9th of January 1971 in Dom Sindikata, with the screening
+                    of Robert Altman’s Mash. Envisioned as the annual review of the best films of the season, the Belgrade
+                    International Film Festival - FEST – evolved to become one of the most important festivals on the continent
+                    and a pillar event of Belgrade's cultural life and an indispensable element in the coming of age of many
+                    generations of film fans.
+                    <br/>
+                </p>
+                <p>
+                    The first FEST, under the slogan &ldquo;A Brave New World&rdquo; was opened on the 9
+                    <sup>th</sup> of January 1971 in Dom Sindikata, with the screening of Robert Altman&rsquo;s &ldquo;Mash&rdquo;.
+                    Envisioned as the annual review of the best films of the season, the Belgrade International Film Festival
+                    - FEST - evolved to become one of the most important festivals on the continent and a pillar event of
+                    the cultural life in Belgrade, as well as an indispensable element in the coming of age of many generations
+                    of film fans.
+                </p>
+                <p>
+                    Today, nearly five decades after its first edition, FEST continues to fulfil its cultural and educational role with the same
+                    energy, broadening the horizons of all film fans.
+                </p>
+                <p>
+                    An important feature of FEST all these years has been its openness to films from all parts of the world, as well as to all
+                    relevant authors and works that would never have the opportunity to be shown in cinemas. Authors like&nbsp;Theo
+                    Angelopoulos, Bob Rafelson, Volker Schl&ouml;ndorff, David Cronenberg, Ken Russel, Wim Wenders, Kieslowski,
+                    Herzog&nbsp;had the opportunity to meet each other for the first time in Belgrade, on FEST.
+                </p>
+                <p>
+                    The first FEST was quite spectacular, featuring &ldquo;A Space Odyssey&rdquo; by Stanley Kubrick; Dennis Hopper&rsquo;s &ldquo;Easy
+                    Rider&ldquo;; the already mentioned &ldquo;Mash&rdquo; by Robert Altman; the films by Eric Rohmer, Louis
+                    Bunuel, Živojin Pavlović... Although many nostalgically, but rightfully so, consider this first edition
+                    of the Festival to be unmatched, the truth is that in the years that followed, FEST presented its audiences
+                    with many opportunities to see the films that have later been counted among the best in film history.
+                    Many illustrious international actors and directors have been the festival&rsquo;s guests over the last
+                    four decades:&nbsp;Marcello Mastroianni, Harvey Keitel, Liv Ullman, Bernardo Bertolucci, Sophia Loren,
+                    Robert de Niro, Antonioni, Johnny Depp, Milos Forman, Catherine Deneuve, Wim Wenders, Abaz Kiarostami,
+                    Hanna Schygulla, Monica Bellucci, the above mentioned Rafelson, Schl&ouml;ndorff, and Russell... a long,
+                    honourable and impressive list of names.
+                </p>
+                <p>
+                    Since its inception, the main film programme of FEST has always been enriched with diverse accompanying ones, the quality
+                    of which often exceeded their supporting role. One should also mention numerous publications, as well
+                    as exhibitions and symposiums held during the Festival.
+                </p>
+                <p>
+                    To date, FEST boasts four million visitors and nearly 4000 relevant international films, which have had their Yugoslav/Serbian
+                    and often regional premiere on the Festival.
+                </p>
+                <p>
+                    In 2015 FEST was transformed into an official&nbsp;competition festival with four distinct competition selections: &ldquo;The&nbsp;main
+                    competition programme&rdquo; - international selection;&nbsp;&ldquo;Serbian Film&rdquo; - national selection;
+                    &ldquo;Frontiers&rdquo; - subversive, controversial and arthouse films that move borders in a thematic
+                    and aesthetic sense; and movies from region that compete for &ldquo;Nebojša Đukelić&rdquo; Award.&nbsp;
+                </p>
             </div>
 
             <!-- ============== BANNER ================ -->
             <div class="col-md-2">
                 <a href="" class="d-none d-md-block">
                     <img src="images/banner.jpg" alt="banner" class="w-100 pb-2">
+                </a>
+                <a href="" class="d-none d-md-block">
+                    <img src="images/banner.jpg" alt="banner" class="w-100 py-2">
+                </a>
+                <a href="" class="d-none d-md-block d-lg-none d-xl-block">
+                    <img src="images/banner.jpg" alt="banner" class="w-100 py-2">
                 </a>
                 <a href="" class="d-md-none pt-5">
                     <img src="images/banner-small.JPG" alt="banner" class="w-100 py-5">
