--- a/repertoire.html
+++ b/repertoire.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Template</title>
+    <title>Information</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -32,8 +32,8 @@
             <span class="h1 align-middle" id="festival-title">Film Festival 2018</span>
         </div>
         <a href="#" id="language" class="ml-auto mr-1">
-            <img src="images/eng_flag_48.png" alt="english-language" class="mr-auto d-none d-sm-block">
-            <img src="images/eng_flag_32.png" alt="english-language" class="mr-auto d-sm-none">
+            <img src="images/srb_flag_48.png" alt="serbian-language" class="mr-auto d-none d-sm-block">
+            <img src="images/srb_flag_32.png" alt="serbian-language" class="mr-auto d-sm-none">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
             aria-expanded="false" aria-label="Toggle navigation">
@@ -64,8 +64,8 @@
                     </li>
                     <li class="nav-item dropdown">
                         <a href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <span class="nav-link h3 d-md-none">Repertorie</span>
-                            <a href="repertorie.html" class="nav-link h3 d-none d-md-block">Repertoire</a>
+                            <span class="nav-link h3 d-md-none">Repertoire</span>
+                            <a href="repertoire.html" class="nav-link h3 d-none d-md-block">Repertoire</a>
                         </a>
                         <div class="dropdown-menu bg-blue" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item h5 rounded" href="films.html">Films</a>
@@ -89,6 +89,7 @@
         </nav>
     </header>
 
+
     <!-- ============== MAIN ================ -->
     <main class="container">
 
@@ -102,32 +103,44 @@
                                 <i class="fa fa-home"></i>
                             </a>
                         </li>
-                        <li class="breadcrumb-item">
-                            <a href="#">Library</a>
+                        <li class="breadcrumb-item active">
+                            Repertoire
                         </li>
-                        <li class="breadcrumb-item active" aria-current="page">Data</li>
                     </ol>
                 </nav>
-
-                <!-- <hr class="bg-blue" /> -->
             </div>
         </div>
+
         <div class="row">
 
             <!-- ============== LEFT NAVIGATION ================ -->
             <nav class="col-md-2 mb-3">
                 <div class="btn-group-vertical w-100" role="group">
-                    <a href="about.html" class="btn btn-outline-blue">About</a>
-                    <a href="jury.html" class="btn btn-outline-blue">Jury</a>
-                    <a href="sponsors.html" class="btn btn-outline-blue">Sponsors</a>
-                    <a href="contact.html" class="btn btn-outline-blue">Contact</a>
+                    <a href="films.html" class="btn btn-outline-blue">Films</a>
+                    <a href="showings.html" class="btn btn-outline-blue">Showings</a>
+                    <a href="tickets.html" class="btn btn-outline-blue">Tickets</a>
                 </div>
 
             </nav>
             <!-- ============== MAIN CONTENT ================ -->
             <div class="col-md-8">
-                main content
+                <h2 class="text-blue">Repertoire</h2>
+                <hr / class="bg-light">
 
+                <h4 class="text-blue">Films</h4>
+                <p>Find out more about the
+                    <a href="films.html">films</a>
+                </p>
+                <h4 class="text-blue">Showings</h4>
+                <p>
+                    Find out more about 
+                    <a href="showings.html">showings</a>
+                </p>
+                <h4 class="text-blue">Tickets</h4>
+                <p>
+                    Find out more about where to bye 
+                    <a href="tickets.html">tickets</a>
+                </p>
             </div>
 
             <!-- ============== BANNER ================ -->
@@ -151,9 +164,7 @@
                 </a>
                 <p class="font-italic m-0">&copy; 2018 Marija Kostić, Stefan Milanović</p>
                 <p class="m-0">Odsek za softversko inženjerstvo Elektrotehničkog fakulteta Univerziteta u Beogradu</p>
-
             </div>
-
         </div>
     </footer>
 
