--- a/awards.html
+++ b/awards.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Template</title>
+    <title>Awards</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -32,8 +32,8 @@
             <span class="h1 align-middle" id="festival-title">Film Festival 2018</span>
         </div>
         <a href="#" id="language" class="ml-auto mr-1">
-            <img src="images/eng_flag_48.png" alt="english-language" class="mr-auto d-none d-sm-block">
-            <img src="images/eng_flag_32.png" alt="english-language" class="mr-auto d-sm-none">
+            <img src="images/srb_flag_48.png" alt="serbian-language" class="mr-auto d-none d-sm-block">
+            <img src="images/srb_flag_32.png" alt="serbian-language" class="mr-auto d-sm-none">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
             aria-expanded="false" aria-label="Toggle navigation">
@@ -103,9 +103,9 @@
                             </a>
                         </li>
                         <li class="breadcrumb-item">
-                            <a href="#">Library</a>
+                            <a href="info.html">Info</a>
                         </li>
-                        <li class="breadcrumb-item active" aria-current="page">Data</li>
+                        <li class="breadcrumb-item active" aria-current="page">Awards</li>
                     </ol>
                 </nav>
 
@@ -119,20 +119,31 @@
                 <div class="btn-group-vertical w-100" role="group">
                     <a href="about.html" class="btn btn-outline-blue">About</a>
                     <a href="jury.html" class="btn btn-outline-blue">Jury</a>
+                    <a href="awards.html" class="btn btn-outline-blue">Awards</a>
                     <a href="sponsors.html" class="btn btn-outline-blue">Sponsors</a>
                     <a href="contact.html" class="btn btn-outline-blue">Contact</a>
                 </div>
-
             </nav>
             <!-- ============== MAIN CONTENT ================ -->
             <div class="col-md-8">
-                main content
-
+                <h2 class="text-blue">NAGRADE ŽIRIJA GLAVNOG TAKMIČARSKOG PROGRAMA</h2>
+                <ul>
+                    <li>&nbsp; &nbsp; Nagrada &bdquo;Beogradski pobednik&ldquo; za najbolji film - dodeljuje se producentu&nbsp;</li>
+                    <li>&nbsp; &nbsp; Specijalna Nagrada žirija&nbsp;</li>
+                    <li>&nbsp; &nbsp; Nagrada za najbolju režiju</li>
+                    <li>&nbsp; &nbsp; Nagrada za najbolju žensku ulogu</li>
+                    <li>&nbsp; &nbsp; Nagrada za najbolju mušku ulogu</li>
+                    <li>&nbsp; &nbsp; Nagrada za najbolji scenario</li>
+                    <li>&nbsp; &nbsp; Nagrada za najbolji debi&nbsp;</li>
+                </ul>
             </div>
 
             <!-- ============== BANNER ================ -->
             <div class="col-md-2">
                 <a href="" class="d-none d-md-block">
+                    <img src="images/banner.jpg" alt="banner" class="w-100 pb-2">
+                </a>
+                <a href="" class="d-none d-md-block d-lg-none">
                     <img src="images/banner.jpg" alt="banner" class="w-100 pb-2">
                 </a>
                 <a href="" class="d-md-none pt-5">
