--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Template</title>
+    <title>Contact</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -32,8 +32,8 @@
             <span class="h1 align-middle" id="festival-title">Film Festival 2018</span>
         </div>
         <a href="#" id="language" class="ml-auto mr-1">
-            <img src="images/eng_flag_48.png" alt="english-language" class="mr-auto d-none d-sm-block">
-            <img src="images/eng_flag_32.png" alt="english-language" class="mr-auto d-sm-none">
+            <img src="images/srb_flag_48.png" alt="serbian-language" class="mr-auto d-none d-sm-block">
+            <img src="images/srb_flag_32.png" alt="serbian-language" class="mr-auto d-sm-none">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
             aria-expanded="false" aria-label="Toggle navigation">
@@ -103,9 +103,9 @@
                             </a>
                         </li>
                         <li class="breadcrumb-item">
-                            <a href="#">Library</a>
+                            <a href="info.html">Info</a>
                         </li>
-                        <li class="breadcrumb-item active" aria-current="page">Data</li>
+                        <li class="breadcrumb-item active" aria-current="page">Jury</li>
                     </ol>
                 </nav>
 
@@ -119,6 +119,7 @@
                 <div class="btn-group-vertical w-100" role="group">
                     <a href="about.html" class="btn btn-outline-blue">About</a>
                     <a href="jury.html" class="btn btn-outline-blue">Jury</a>
+                    <a href="awards.html" class="btn btn-outline-blue">Awards</a>
                     <a href="sponsors.html" class="btn btn-outline-blue">Sponsors</a>
                     <a href="contact.html" class="btn btn-outline-blue">Contact</a>
                 </div>
@@ -126,9 +127,45 @@
             </nav>
             <!-- ============== MAIN CONTENT ================ -->
             <div class="col-md-8">
-                main content
+                <h2 class="text-blue">Contact</h2>
 
+                <h6>FESTIVAL BOARD</h6>
+
+                <p>Ivona Jevtić (Board president), Nada Popović Perišić, Nataša Ilić, Snežana Penev, Mladen Đorđević</p>
+
+                <ul>
+                    <li>Artistic Director:&nbsp;Jugoslav Pantelić</li>
+                    <li>Selektor of the Programmes &ldquo;Thrills and Kills,&rdquo; &ldquo;Frontiers&rdquo; and &ldquo;Microwave:&rdquo;
+                        Mladen Đorđević&nbsp;</li>
+                    <li>CEBEF Acting Director:&nbsp;Nataša Ilić,&nbsp;
+                        <a href="mailto:info@fest.rs">natasa.ilic@cebef.rs</a>
+                    </li>
+                    <li>Executive Producer: Darja Bajić, darja.bajic@cebef.rs</li>
+                    <li>Chief Organizer:&nbsp;Darija Jevtić,&nbsp;
+                        <a href="mailto:darija.jevtic@cebef.rs">darija.jevtic@cebef.rs</a>
+                    </li>
+                    <li>Organizer: Iva Čolić,&nbsp;iva.colic@cebef.rs</li>
+                    <li>Programme Coordinator: Ksenija&nbsp;Zelenović,&nbsp;MPhil,
+                        <a href="mailto:program@fest.rs">ksenija.zelenovic@cebef.rs</a>&nbsp;</li>
+                    <li>Guest Service Coordinator:&nbsp;Nađa Vujić,&nbsp;
+                        <a href="mailto:nadja.vujic@cebef.rs">nadja.vujic@cebef.rs</a>
+                    </li>
+                    <li>Press Service Coordinator:&nbsp;Vuk Pajković,&nbsp;
+                        <a href="mailto:press@fest.rs">press@cebef.rs</a>
+                    </li>
+                    <li>Collaborators: Ljubica Luković and Jovana Žujović</li>
+                    <li>Marketing and Sponsorship: Vanja Vuksanović,&nbsp;
+                        <a href="mailto:vanja.vuksanovic@cebef.rs">vanja.vuksanovic@cebef.rs</a>
+                    </li>
+                    <li>Assistant Programme Coordinator and Head of the Copy Service: Petar Alempijević,&nbsp;
+                        <a href="mailto:petar.alempijevic@cebef.rs">petar.alempijevic@cebef.rs</a>
+                    </li>
+                    <li>Graphic Designer: Simona Dašić Raca&nbsp;</li>
+                    <li>Editors of the FEST Catalogue: Jelena Janković-Beguš, MPhil and Milica Kadić</li>
+                    <li>Administration:&nbsp;Marina Vasilić and Danijela Ranđelović</li>
+                </ul>
             </div>
+
 
             <!-- ============== BANNER ================ -->
             <div class="col-md-2">
@@ -151,9 +188,7 @@
                 </a>
                 <p class="font-italic m-0">&copy; 2018 Marija Kostić, Stefan Milanović</p>
                 <p class="m-0">Odsek za softversko inženjerstvo Elektrotehničkog fakulteta Univerziteta u Beogradu</p>
-
             </div>
-
         </div>
     </footer>
 
