--- a/info.html
+++ b/info.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Template</title>
+    <title>Information</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -32,8 +32,8 @@
             <span class="h1 align-middle" id="festival-title">Film Festival 2018</span>
         </div>
         <a href="#" id="language" class="ml-auto mr-1">
-            <img src="images/eng_flag_48.png" alt="english-language" class="mr-auto d-none d-sm-block">
-            <img src="images/eng_flag_32.png" alt="english-language" class="mr-auto d-sm-none">
+            <img src="images/srb_flag_48.png" alt="serbian-language" class="mr-auto d-none d-sm-block">
+            <img src="images/srb_flag_32.png" alt="serbian-language" class="mr-auto d-sm-none">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
             aria-expanded="false" aria-label="Toggle navigation">
@@ -89,6 +89,7 @@
         </nav>
     </header>
 
+
     <!-- ============== MAIN ================ -->
     <main class="container">
 
@@ -102,16 +103,14 @@
                                 <i class="fa fa-home"></i>
                             </a>
                         </li>
-                        <li class="breadcrumb-item">
-                            <a href="#">Library</a>
+                        <li class="breadcrumb-item active">
+                            Info
                         </li>
-                        <li class="breadcrumb-item active" aria-current="page">Data</li>
                     </ol>
                 </nav>
-
-                <!-- <hr class="bg-blue" /> -->
             </div>
         </div>
+
         <div class="row">
 
             <!-- ============== LEFT NAVIGATION ================ -->
@@ -119,6 +118,7 @@
                 <div class="btn-group-vertical w-100" role="group">
                     <a href="about.html" class="btn btn-outline-blue">About</a>
                     <a href="jury.html" class="btn btn-outline-blue">Jury</a>
+                    <a href="awards.html" class="btn btn-outline-blue">Awards</a>
                     <a href="sponsors.html" class="btn btn-outline-blue">Sponsors</a>
                     <a href="contact.html" class="btn btn-outline-blue">Contact</a>
                 </div>
@@ -126,8 +126,34 @@
             </nav>
             <!-- ============== MAIN CONTENT ================ -->
             <div class="col-md-8">
-                main content
+                <h2 class="text-blue">Information</h2>
+                <hr / class="bg-light">
 
+                <h4 class="text-blue">About</h4>
+                <p>
+                    Find out more about the
+                    <a href="about.html">festival</a>
+                </p>
+                <h4 class="text-blue">Jury</h4>
+                <p>
+                    See who is the
+                    <a href="jury.html">jury</a>
+                </p>
+                <h4 class="text-blue">Awards</h4>
+                <p>
+                    Find out more about
+                    <a href="awards.html">awards</a>
+                </p>
+                <h4 class="text-blue">Sponsors</h4>
+                <p>
+                    Find out more about our
+                    <a href="sponsors.html">sponsors</a>
+                </p>
+                <h4 class="text-blue">Contact</h4>
+                <p>
+                    See how to
+                    <a href="contact.html">contact</a> us
+                </p>
             </div>
 
             <!-- ============== BANNER ================ -->
@@ -151,9 +177,7 @@
                 </a>
                 <p class="font-italic m-0">&copy; 2018 Marija Kostić, Stefan Milanović</p>
                 <p class="m-0">Odsek za softversko inženjerstvo Elektrotehničkog fakulteta Univerziteta u Beogradu</p>
-
             </div>
-
         </div>
     </footer>
 
