--- a/sponsors.html
+++ b/sponsors.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Template</title>
+    <title>Sponsors</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -32,8 +32,8 @@
             <span class="h1 align-middle" id="festival-title">Film Festival 2018</span>
         </div>
         <a href="#" id="language" class="ml-auto mr-1">
-            <img src="images/eng_flag_48.png" alt="english-language" class="mr-auto d-none d-sm-block">
-            <img src="images/eng_flag_32.png" alt="english-language" class="mr-auto d-sm-none">
+            <img src="images/srb_flag_48.png" alt="serbian-language" class="mr-auto d-none d-sm-block">
+            <img src="images/srb_flag_32.png" alt="serbian-language" class="mr-auto d-sm-none">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
             aria-expanded="false" aria-label="Toggle navigation">
@@ -103,9 +103,9 @@
                             </a>
                         </li>
                         <li class="breadcrumb-item">
-                            <a href="#">Library</a>
+                            <a href="info.html">Info</a>
                         </li>
-                        <li class="breadcrumb-item active" aria-current="page">Data</li>
+                        <li class="breadcrumb-item active" aria-current="page">Sponsors</li>
                     </ol>
                 </nav>
 
@@ -119,20 +119,81 @@
                 <div class="btn-group-vertical w-100" role="group">
                     <a href="about.html" class="btn btn-outline-blue">About</a>
                     <a href="jury.html" class="btn btn-outline-blue">Jury</a>
+                    <a href="awards.html" class="btn btn-outline-blue">Awards</a>
                     <a href="sponsors.html" class="btn btn-outline-blue">Sponsors</a>
                     <a href="contact.html" class="btn btn-outline-blue">Contact</a>
                 </div>
-
             </nav>
             <!-- ============== MAIN CONTENT ================ -->
             <div class="col-md-8">
-                main content
-
+                <div class="row mb-2">
+                    <div class="col-12">
+                        <h2 class="text-blue">With special gratitude</h2>
+                    </div>
+                    <div class="col-12">
+                        <a href="http://www.lukoil.rs">
+                            <img class="img-fluid" src="images/sponsors/sponzor_lukoil.png" alt="lukoil">
+                        </a>
+                    </div>
+                </div>
+                <div class="row mb-2">
+                    <div class="col-12">
+                        <h2 class="text-blue">Friends of the Festival</h2>
+                    </div>
+                    <div class="col-6 col-lg-3">
+                        <a href="https://www.mts.rs">
+                            <img class="card-img-top" src="images/sponsors/sponzor_mts.png" alt="mts">
+                        </a>
+                    </div>
+                    <div class="col-6 col-lg-3">
+                        <a href="http://www.beg.aero/">
+                            <img class="card-img-top" src="images/sponsors/sponzor-aerodrom.png" alt="aerodrom">
+                        </a>
+                    </div>
+                    <div class="col-6 col-lg-3">
+                        <a href="http://www.vodavoda.rs/">
+                            <img class="card-img-top" src="images/sponsors/sponzor_vodavoda.png" alt="vodavoda">
+                        </a>
+                    </div>
+                    <div class="col-6 col-lg-3 card">
+                        <a href="http://www.endorfingastropub.com/">
+                            <img class="card-img-top" src="images/sponsors/sponzor_endorfingastropub.png" alt="endorfingastropub">
+                        </a>
+                    </div>
+                    <div class="col-6 col-lg-3">
+                        <a href="http://zajecarskopivo.com/">
+                            <img class="card-img-top" src="images/sponsors/sponzor-zajecarsko.png" alt="zajecarsko">
+                        </a>
+                    </div>
+                    <div class="col-6 col-lg-3">
+                        <a href="http://maderarestoran.com/">
+                            <img class="card-img-top" src="images/sponsors/sponzor_madera.png" alt="madera">
+                        </a>
+                    </div>
+                </div>
+                <div class="row mb-2">
+                    <div class="col-12">
+                        <h2 class="text-blue">Media sponsors</h2>
+                    </div>
+                    <div class="col-6 col-md-3">
+                        <a href="https://www.blic.rs/">
+                            <img class="card-img-top" src="images/sponsors/sponzor_blic.png" alt="blic">
+                        </a>
+                    </div>
+                    <div class="col-6 col-md-3 pt-2">
+                        <a href="https://noizz.rs/">
+                            <img class="card-img-top" src="images/sponsors/sponzor-noizz.png" alt="noizz">
+                        </a>
+                    </div>
+                </div>
             </div>
 
             <!-- ============== BANNER ================ -->
             <div class="col-md-2">
                 <a href="" class="d-none d-md-block">
+                    <img src="images/banner.jpg" alt="banner" class="w-100 pb-2">
+                </a>
+                <a href="" class="d-none d-md-block d-lg-none">
                     <img src="images/banner.jpg" alt="banner" class="w-100 pb-2">
                 </a>
                 <a href="" class="d-md-none pt-5">
